--- a/index.html
+++ b/index.html
@@ -1,14 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" >
     <link rel="stylesheet" href="./reset.css" >
+    <link rel="stylesheet" href="./style.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,500;8..144,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,500;8..144,700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Sweet Berries Cooking School</title>
 </head>
 <body>
-    
+   <nav class="navigation">
+        <div class="nav-left">
+            <a href="#">Courses</a>
+            <a href="#">About us</a>
+        </div>
+        <div class="nav-center">
+            <a href="index.html">
+                <img src="assets/logos/SweetBerries_Logo.svg" alt="Sweet Berries Cooking School logo in black">
+            </a>
+        </div>
+        <div class="nav-right">
+            <button>Get Started</button>
+        </div>
+   </nav> 
+   <header>
+        <div class="header-left">
+            <h1>Discover Your Perfect Online Cooking Course</h1>
+            <p>All our courses are designed to give you an exceptional learning experience, with hands-on video sessions and personal mentorship from expert Sweet Berries instructors.</p>
+        </div>
+        <div class="header-right">
+            <img src="assets/images/header_image.png" alt="Image of a man and woman standing in front of a counter cooking">
+        </div>
+   </header>
+   <main>
+    <section class="content-grid">
+        <div class="content-card banner">
+            <h2>Explore our most popular cooking courses!</h2>
+        </div>
+        <div class="content-card">
+            <h3>Chef Skills</h3>
+            <p>Master the skills and techniques that will take your culinary abilities to the next level and help you excel in the food industry.</p>
+            <button>Get Started</button>
+        </div>
+        <div class="content-card">
+            <h3>Cooking Essentials</h3>
+            <p>Learn the essential skills and techniques that will lead to a lifetime of restaurant-quality cooking.</p>
+            <button>Get Started</button>
+        </div>
+        <div class="content-card">
+            <h3>Nutrition in Cooking</h3>
+            <p>Master cookery and nutrition skills for health and wellbeing with this 20-week Accredited Online Nutrition Course.</p>
+            <button>Get Started</button>
+        </div>
+        <div class="content-card">
+            <h3>Plant-Based Cooking</h3>
+            <p>Learn the skills and techniques that will lead to a lifetime of plant-based and planet-friendly meals.</p>
+            <button>Get Started</button>
+        </div>
+        <div class="content-card">
+            <h3>Teen's Kitchen</h3>
+            <p>Teen’s Kitchen is a 6-week immersive and interactive online cookery course and certificate exclusively for young adults aged 13-18.</p>
+            <button>Get Started</button>
+        </div>
+    </section>
+   </main>
+   <footer>
+    <img src="assets/logos/SweetBerries_Logo.svg" alt="Sweet Berries Cooking School logo in black">
+   </footer>
 </body>
 </html>
