--- a/index.html
+++ b/index.html
@@ -27,44 +27,66 @@
         <div class="nav-right">
             <button>Get Started</button>
         </div>
+        <div class="nav-ham">
+            <label for="hamburger-menu">&#9776;</label>
+            <input type="checkbox" id="hamburger-menu">       
+            <div id="nav-ham-items">
+                <a href="#">Courses</a>
+                <a href="#">About us</a>
+                <a href="#">Get Started</a>
+            </div>
+        </div> 
    </nav> 
-   <header>
         <div class="header-left">
             <h1>Discover Your Perfect Online Cooking Course</h1>
             <p>All our courses are designed to give you an exceptional learning experience, with hands-on video sessions and personal mentorship from expert Sweet Berries instructors.</p>
         </div>
         <div class="header-right">
-            <img src="assets/images/header_image.png" alt="Image of a man and woman standing in front of a counter cooking">
+            <img src="assets/images/header_image.png" alt="Image of a man and woman standing in front of a counter and cooking">
         </div>
-   </header>
    <main>
     <section class="content-grid">
         <div class="content-card banner">
             <h2>Explore our most popular cooking courses!</h2>
         </div>
         <div class="content-card">
+            <div class="icon">
+                <img src="assets/icons/knife.svg" alt="Yellow chef knife icon">
+            </div>
             <h3>Chef Skills</h3>
             <p>Master the skills and techniques that will take your culinary abilities to the next level and help you excel in the food industry.</p>
             <button>Get Started</button>
         </div>
         <div class="content-card">
+            <div class="icon">
+                <img src="assets/icons/cooking-pot.svg" alt="Yellow cooking pot icon">
+            </div>
             <h3>Cooking Essentials</h3>
             <p>Learn the essential skills and techniques that will lead to a lifetime of restaurant-quality cooking.</p>
             <button>Get Started</button>
         </div>
         <div class="content-card">
+            <div class="icon">
+                <img src="assets/icons/clipboard-text.svg" alt="Yellow clipboard icon">
+            </div>
             <h3>Nutrition in Cooking</h3>
             <p>Master cookery and nutrition skills for health and wellbeing with this 20-week Accredited Online Nutrition Course.</p>
             <button>Get Started</button>
         </div>
         <div class="content-card">
+            <div class="icon">
+                <img src="assets/icons/leaf.svg" alt="Yellow leaf icon">
+            </div>
             <h3>Plant-Based Cooking</h3>
             <p>Learn the skills and techniques that will lead to a lifetime of plant-based and planet-friendly meals.</p>
             <button>Get Started</button>
         </div>
         <div class="content-card">
+            <div class="icon">
+                <img src="assets/icons/hamburger.svg" alt="Yellow hamburger icon">
+            </div>
             <h3>Teen's Kitchen</h3>
-            <p>Teen’s Kitchen is a 6-week immersive and interactive online cookery course and certificate exclusively for young adults aged 13-18.</p>
+            <p>Teen's Kitchen is a 6-week immersive and interactive online cookery course and certificate exclusively for young adults aged 13-18.</p>
             <button>Get Started</button>
         </div>
     </section>
