--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Great work! Your HTML and CSS passed the HTML and CSS validators! -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,6 +45,7 @@
         <div class="header-right">
             <img src="assets/images/header_image.png" alt="Image of a man and woman standing in front of a counter and cooking">
         </div>
+        <!-- Superb work on not forgetting to use semantic HTML! -->
    <main>
     <section class="content-grid">
         <div class="content-card banner">
@@ -96,3 +98,4 @@
    </footer>
 </body>
 </html>
+
